Fixed some layout issues, worked on the giphy a bit

--- a/assets/_sass/_layout.scss
+++ b/assets/_sass/_layout.scss
@@ -93,6 +93,7 @@ section {
   #sky {
     position: absolute;
 	max-height: 150px;
+	top:20px;
   }
   .wrapper {
     position: relative;
